--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -17,43 +17,33 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - EmergencyWithdrawn
-        - OwnershipTransferred
-        - Paused
+        - TotalEmergencyWithdrawn
         - RewardRateUpdated
         - RewardsClaimed
-        - Staked
-        - StakingInitialized
-        - StakingPaused
-        - StakingUnpaused
-        - TokenRecovered
-        - Unpaused
+        - Staked         
         - Withdrawn
+        - TokenStats
+        - UserBalance
+        - Totalstaked
+        - TotalWithdrawn
+        - TotalUsers
       abis:
         - name: Staking
           file: ./abis/Staking.json
       eventHandlers:
         - event: EmergencyWithdrawn(indexed address,uint256,uint256,uint256,uint256)
           handler: handleEmergencyWithdrawn
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: Paused(address)
-          handler: handlePaused
+       
+        
         - event: RewardRateUpdated(uint256,uint256,uint256,uint256)
           handler: handleRewardRateUpdated
         - event: RewardsClaimed(indexed address,uint256,uint256,uint256,uint256)
           handler: handleRewardsClaimed
         - event: Staked(indexed address,uint256,uint256,uint256,uint256)
           handler: handleStaked
-        - event: StakingInitialized(indexed address,uint256,uint256)
-          handler: handleStakingInitialized
-        - event: StakingPaused(uint256)
-          handler: handleStakingPaused
-        - event: StakingUnpaused(uint256)
-          handler: handleStakingUnpaused
-        - event: TokenRecovered(indexed address,uint256,uint256)
-          handler: handleTokenRecovered
-        - event: Unpaused(address)
-          handler: handleUnpaused
+       
+       
+       
         - event: Withdrawn(indexed address,uint256,uint256,uint256,uint256,uint256)
           handler: handleWithdrawn
       file: ./src/staking.ts
